css overlap resolves

--- a/Frontend/src/components/Search.css
+++ b/Frontend/src/components/Search.css
@@ -1,17 +1,10 @@
 /* Import the "Outfit" font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap');
 
-body {
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: white; /* Set page background to white */
-    font-family: 'Outfit', sans-serif; /* Apply Outfit font to body */
-    margin: 0;
-}
+
 
 .cont {
-    margin-top: 10rem;
+    margin-top: 20rem;
     text-align: center;
     background-color: #e0f7f4;
     padding: 60px ; /* Increase padding for taller container */
@@ -20,7 +13,6 @@ body {
     max-width: 90%; /* Slight margin from edges on very large screens */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Shadow for better contrast */
     position: relative;
-    /* margin-left: auto; */
     
     margin: auto;
     margin-top: 10rem;
