--- a/Frontend/src/components/ngopage.css
+++ b/Frontend/src/components/ngopage.css
@@ -1,9 +1,4 @@
-body {
-    font-family:outfit;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-  }
+
   
   .ngo-page-container {
     max-width: 900px;
